add_subdirectory(common)
add_subdirectory(buttons)
add_subdirectory(counter)
add_subdirectory(dram_test)
add_subdirectory(bram_test)
add_subdirectory(bram_sdp_test)
add_subdirectory(bram_init_test)
add_subdirectory(bram_sdp_init_test)
add_subdirectory(carry)
add_subdirectory(simple_ff)
add_subdirectory(dram)
add_subdirectory(bram)
add_subdirectory(chain_packing)
add_subdirectory(uart_loopback)
add_subdirectory(ff_sr_ce)
add_subdirectory(dram_shifter)
add_subdirectory(bram_shifter)
add_subdirectory(srl)
# TODO: Disabling until https://github.com/SymbiFlow/prjxray/issues/1141 is
# resolved
#add_subdirectory(pll)

