add_subdirectory(common)
add_subdirectory(buttons)
add_subdirectory(counter)
add_subdirectory(dram_test)
add_subdirectory(bram_test)
add_subdirectory(bram_sdp_test)
add_subdirectory(bram_init_test)
add_subdirectory(bram_sdp_init_test)
add_subdirectory(carry)
add_subdirectory(simple_ff)
add_subdirectory(dram)
add_subdirectory(bram)
add_subdirectory(chain_packing)
add_subdirectory(uart_loopback)
add_subdirectory(ff_sr_ce)
add_subdirectory(dram_shifter)
add_subdirectory(bram_shifter)
add_subdirectory(srl)
add_subdirectory(pll)
add_subdirectory(iobuf)
add_subdirectory(iobuf_infer)
add_subdirectory(iobuf_i2c)
add_subdirectory(obuftds)
add_subdirectory(obufds)
add_subdirectory(serdes)
