add_subdirectory(N5ff)
add_subdirectory(Nff)
add_subdirectory(Nlut)
add_subdirectory(carry4_modes)
add_subdirectory(muxes)
add_subdirectory(routing)

add_file_target(FILE slicel.model.xml SCANNER_TYPE xml)
add_file_target(FILE slicel.pb_type.xml SCANNER_TYPE xml)
add_file_target(FILE slicel.sim.v SCANNER_TYPE verilog)
add_verilog_image_gen(FILE slicel.sim.v)
