add_custom_target(all_openfpga_k4_N8_tests_no_adder)
add_custom_target(all_openfpga_k4_N8_tests_adder)

add_subdirectory(counter)
add_subdirectory(adder_8)

add_dependencies(all_quicklogic_tests all_openfpga_k4_N8_tests_no_adder)
add_dependencies(all_quicklogic_tests all_openfpga_k4_N8_tests_adder)
