add_subdirectory(vpr_pad)
add_subdirectory(assp)
add_subdirectory(bidir)
add_subdirectory(clock)
add_subdirectory(fpga_interconnect)
add_subdirectory(gmux)
add_subdirectory(gnd)
add_subdirectory(logic)
add_subdirectory(mult)
add_subdirectory(sdiomux)
add_subdirectory(vcc)
add_subdirectory(assp_mult)
add_subdirectory(assp_ram2048x32b)
add_subdirectory(assp_ram512x36b)
add_subdirectory(assp_ram512x32b)

