add_custom_target(all_qlf_k4n8_tests_no_adder)
add_custom_target(all_qlf_k4n8_tests_adder)

add_subdirectory(adder_8)
add_subdirectory(adder_64)
add_subdirectory(adder_128)
add_subdirectory(adder_FFs)
add_subdirectory(full_adder)
add_subdirectory(and2)
add_subdirectory(and2_latch)
add_subdirectory(counter)
add_subdirectory(counter_5_120_13)
add_subdirectory(counter_16bit)
add_subdirectory(clock_tree_design)
add_subdirectory(multiplier_8bit)
add_subdirectory(io_reg)
add_subdirectory(io_reg_tc1)
add_subdirectory(io_tc1)
add_subdirectory(routing_test)
add_subdirectory(shift_reg_8)
add_subdirectory(shift_reg_576)
add_subdirectory(top_120_13)
add_subdirectory(unsigned_mult_60)


add_dependencies(all_quicklogic_tests all_qlf_k4n8_tests_no_adder)
add_dependencies(all_quicklogic_tests all_qlf_k4n8_tests_adder)
