add_subdirectory(bin2seven)
add_subdirectory(clock_tree_design)
add_subdirectory(Simon_bit_serial_top_module)
add_subdirectory(rs_decoder_1)
add_subdirectory(top_120_13)
add_subdirectory(jpeg_qnr)
add_subdirectory(camif)
add_subdirectory(cavlc_top)
add_subdirectory(iir)
add_subdirectory(counter_32bit)
add_subdirectory(spi_master_top)
add_subdirectory(osc_alu)
add_subdirectory(sha256_fullfit)
add_subdirectory(design1)
add_subdirectory(design2)
add_subdirectory(design3)
add_subdirectory(design4)
add_subdirectory(design5)
add_subdirectory(design6)
add_subdirectory(design7)
add_subdirectory(i2c_master_top)
