include(v2x_tests.cmake)

add_subdirectory(logicbox)
add_subdirectory(muxes)
add_subdirectory(clocks)

add_subdirectory(carry)
add_subdirectory(fig28-lutff-pair)

add_subdirectory(fig41-full-adder)
add_subdirectory(fig42-dff)
add_subdirectory(dsp_combinational)
add_subdirectory(dsp_in_registered)
add_subdirectory(dsp_inout_registered)
add_subdirectory(dsp_inout_registered_dualclk)
add_subdirectory(dsp_out_registered)
add_subdirectory(dsp_partial_registered)
#add_subdirectory(dsp_modes)
add_subdirectory(simple_pll)
add_subdirectory(multiple_instance)
